@@ -2,6 +2,13 @@
 
 you know Lockstep? from Rhythm Heaven? this is that
 
+to use: 
+```sh
+java -jar --enable-preview <the file>
+```
+you can optionally specify `--game`, `--music`, `--sprite`, and `--color` to be either `lockstep1` or `lockstep2`  
+if you only specify some of them the rest will be determined by which makes most sense
+
 ### [Download](https://github.com/Canary-Prism/Unlockstep/releases/)
 
 I'm assuming you know how to use GitHub. If not then here:
@@ -23,6 +30,11 @@ This program uses Java 22 with preview features bc i'm weird like that
 
 
 ## Historical Changelog
+
+### 2.0.0
+- added Lockstep 2
+- added Main arguments 
+ - so you can now mix and match parts from Lockstep and Lockstep two
 
 ### 1.0.0
 - made the thing
